--- a/src/main/resources/edu/farmingdale/taskmanager/party-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/party-view.fxml
@@ -76,7 +76,7 @@
                                                               </LinearGradient>
                                                           </fill>
                                                       </Rectangle>
-                                                      <Label alignment="CENTER" prefHeight="70.0" prefWidth="436.0" styleClass="username" text="All Friends" textAlignment="CENTER">
+                                                      <Label fx:id="AllFriends" alignment="CENTER" onMouseClicked="#showFriends" prefHeight="70.0" prefWidth="436.0" styleClass="username" text="All Friends" textAlignment="CENTER">
                                                           <padding>
                                                               <Insets left="5.0" top="-8.0" />
                                                           </padding>
@@ -189,14 +189,29 @@
                                           <Insets top="10.0" />
                                        </VBox.margin>
                                     </StackPane>
-                                    <TextField maxHeight="50.0" maxWidth="416.0" prefHeight="50.0" prefWidth="416.0" promptText="search" styleClass="search-field">
+                                    <StackPane alignment="CENTER_RIGHT" maxHeight="50.0" maxWidth="416.0" prefHeight="50.0" prefWidth="416.0">
                                        <VBox.margin>
                                           <Insets left="10.0" />
                                        </VBox.margin>
-                                       <padding>
-                                          <Insets left="45.0" />
-                                       </padding>
-                                    </TextField>
+                                       <children>
+                                          <TextField fx:id="searchField" maxHeight="50.0" maxWidth="416.0" prefHeight="50.0" prefWidth="416.0" promptText="search" styleClass="search-field">
+                                             <padding>
+                                                <Insets left="45.0" />
+                                             </padding>
+                                          </TextField>
+                                          <ImageView fitHeight="35.0" fitWidth="35.0" onMouseClicked="#search" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/arrow-right.png" />
+                                             </image>
+                                             <StackPane.margin>
+                                                <Insets right="12.0" />
+                                             </StackPane.margin>
+                                             <cursor>
+                                                <Cursor fx:constant="HAND" />
+                                             </cursor>
+                                          </ImageView>
+                                       </children>
+                                    </StackPane>
                                     <ScrollPane hbarPolicy="NEVER">
                                        <content>
                                           <VBox fx:id="searchContainer" prefHeight="150.0" prefWidth="100.0" />
@@ -224,7 +239,7 @@
                                   <children>
                                       <VBox maxHeight="931.0" maxWidth="882.0" prefHeight="931.0" prefWidth="882.0" styleClass="container">
                                           <children>
-                                                <Label alignment="CENTER" prefHeight="70.0" prefWidth="882.0" styleClass="party-title" text="Party Name" textAlignment="CENTER">
+                                                <Label fx:id="partyName" alignment="CENTER" prefHeight="70.0" prefWidth="882.0" styleClass="party-title" text="Party Name" textAlignment="CENTER">
                                                     <padding>
                                                         <Insets bottom="-15.0" left="5.0" top="-15.0" />
                                                     </padding>
