--- a/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
+++ b/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
@@ -40,6 +40,11 @@
     -fx-text-fill: #472C01;
 
 }
+
+.type-description{
+    -fx-font-size: 14px;
+    -fx-fill: #472C01;
+}
 .page-title{
     -fx-font-size: 48px;
     -fx-text-fill: #472C01;
@@ -52,7 +57,7 @@
     -fx-font-size: 32px;
     -fx-text-fill: #472C01;
 }
-.attacks-label, .search-name{
+.attacks-label, .search-name, .create-party-section-label{
     -fx-font-size: 24px;
     -fx-text-fill: #472C01;
 }
@@ -72,7 +77,7 @@
     -fx-text-fill: #F8E5B2;
 }
 
-.boss-categories{
+.boss-categories, .members{
     -fx-font-size: 24px;
     -fx-text-fill: #F8E5B2;
 }
@@ -127,6 +132,13 @@
     -fx-background-image:url('../images/search.png');
     -fx-background-repeat: no-repeat;
     -fx-background-position: 10px center;
+    -fx-text-fill: #472C01;
+    -fx-prompt-text-fill: #472C0150;
+    -fx-font-family: 'Inknut Antiqua Regular';
+    -fx-font-size: 20px;
+}
+.party-name-field{
+    -fx-background-color: #8F590245;
     -fx-text-fill: #472C01;
     -fx-prompt-text-fill: #472C0150;
     -fx-font-family: 'Inknut Antiqua Regular';
