--- a/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
+++ b/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
@@ -307,7 +307,7 @@
     -fx-top: 169px;
 
     -fx-background: url('..images/broom2.png');
-    -fx-scale-x: -1;*/
+    -fx-scale-x: -1;
     /*-fx-transform: matrix(-1, 0, 0, 1, 0, 0);*/
 
 }
