--- a/src/main/resources/edu/farmingdale/taskmanager/login-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/login-view.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
-<StackPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024" prefWidth="1440" styleClass="bg" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.LoginController">
+<StackPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024" prefWidth="1440" styleClass="bg" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.LoginController">
     <children>
         <Pane prefHeight="800.0" prefWidth="1000.0" styleClass="container" stylesheets="@styles/style.css" StackPane.alignment="CENTER">
          <children>
@@ -69,15 +77,15 @@
             <Insets top="250.0" />
          </StackPane.margin>
          <children>
-            <Text fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 22px;" text="Email/Username" translateX="-172.0" translateY="-230.0">
+            <Text fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 22px; -fx-font-family: 'Inknut Antiqua';" text="Email/Username" translateX="-172.0" translateY="-230.0">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Text>
             <TextField fx:id="emailTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="540.0" style="-fx-background-color: #F5EBE0;" translateX="-5.0" translateY="-230.0" />
-            <Text fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 22px;" text="Password" translateX="-215.0" translateY="-230.0" />
+            <Text fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 22px; -fx-font-family: 'Inknut Antiqua';" text="Password" translateX="-215.0" translateY="-230.0" />
             <TextField fx:id="passwordTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="540.0" style="-fx-background-color: #F5EBE0;" translateX="-5.0" translateY="-230.0" />
-            <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="75.0" prefWidth="350.0" style="-fx-background-color: #2d1a05; -fx-font-size: 32px; -fx-text-fill: #F5EBE0; -fx-background-radius: 15;" text="Begin Quest" translateY="-180.0">
+            <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="75.0" prefWidth="350.0" style="-fx-background-color: #2d1a05; -fx-font-size: 32px; -fx-text-fill: #F5EBE0; -fx-background-radius: 15; -fx-font-family: 'Inknut Antiqua';" text="Begin Quest" translateY="-180.0">
                <effect>
                   <DropShadow offsetX="5.0" offsetY="10.0">
                      <color>
@@ -85,7 +93,7 @@
                      </color>
                   </DropShadow>
                </effect></Button>
-            <Button fx:id="googleButton" maxWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="280.0" style="-fx-background-color: white; -fx-font-size: 18px; -fx-border-color: black; -fx-border-radius: 8; -fx-background-radius: 8;" text="Sign in with Google" translateY="-120.0" />
+            <Button fx:id="googleButton" maxWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="280.0" style="-fx-background-color: white; -fx-font-size: 18px; -fx-border-color: black; -fx-border-radius: 8; -fx-background-radius: 8; -fx-font-family: 'Inknut Antiqua';" text="Sign in with Google" translateY="-120.0" />
          </children></VBox>
     </children>
 </StackPane>
