--- a/src/main/resources/edu/farmingdale/taskmanager/signup-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/signup-view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<StackPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024" prefWidth="1440" styleClass="bg" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.SignupController">
+<StackPane fx:id="contentArea" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024" prefWidth="1440" styleClass="bg" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.SignupController">
 <children>
     <Pane prefHeight="800.0" prefWidth="1000.0" styleClass="container" stylesheets="@styles/style.css" StackPane.alignment="CENTER" />
     <Pane blendMode="SOFT_LIGHT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="975.0" prefWidth="1200.0" style="-fx-border-color: #6D3535; -fx-border-radius: 20; -fx-border-width: 6;" translateY="-10.0" StackPane.alignment="CENTER">
@@ -49,7 +49,7 @@
             <TextField fx:id="passwordTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="540.0" style="-fx-background-color: #F5EBE0; -fx-background-radius: 12;" translateY="-125.0" />
             <Text fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 22px; -fx-font-family: 'Inknut Antiqua Regular';" text="Confirm Password" translateX="-150.0" translateY="-125.0" />
             <TextField fx:id="confirmPasswordTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="540.0" style="-fx-background-color: #F5EBE0; -fx-background-radius: 12;" translateY="-125.0" />
-            <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="75.0" prefWidth="350.0" style="-fx-background-color: #2d1a05; -fx-font-size: 32px; -fx-text-fill: #F5EBE0; -fx-background-radius: 15; -fx-font-family: 'Inknut Antiqua Regular';" text="Signup" translateY="-65.0">
+            <Button fx:id="signupButton" mnemonicParsing="false" onAction="#onSignupButtonClick" prefHeight="75.0" prefWidth="350.0" style="-fx-background-color: #2d1a05; -fx-font-size: 32px; -fx-text-fill: #F5EBE0; -fx-background-radius: 15; -fx-font-family: 'Inknut Antiqua Regular';" text="Signup" translateY="-65.0">
                 <effect>
                     <DropShadow offsetX="5.0" offsetY="10.0">
                         <color>
@@ -57,7 +57,7 @@
                         </color>
                     </DropShadow>
                 </effect></Button>
-            <Button fx:id="googleButton" maxWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="280.0" style="-fx-background-color: white; -fx-font-size: 18px; -fx-border-color: black; -fx-border-radius: 8; -fx-background-radius: 8; -fx-font-family: 'Inknut Antiqua Regular';" text="Go Back" translateY="-30.0" />
+            <Button fx:id="goBackButton" maxWidth="-Infinity" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="50.0" prefWidth="280.0" style="-fx-background-color: white; -fx-font-size: 18px; -fx-border-color: black; -fx-border-radius: 8; -fx-background-radius: 8; -fx-font-family: 'Inknut Antiqua Regular';" text="Go Back" translateY="-30.0" />
         </children></VBox>
 </children>
 </StackPane>
