--- a/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
+++ b/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
@@ -114,10 +114,26 @@
     -fx-font-size: 16px;
     -fx-text-fill: #F8E5B2;
 }
+
+.xs-friend-card-name{
+    -fx-font-size: 14px;
+    -fx-text-fill: #F8E5B2;
+}
 .large-friend-card-name{
     -fx-font-size: 32px;
     -fx-text-fill: #F8E5B2;
 }
+
+.med-friend-card-name{
+    -fx-font-size: 20px;
+    -fx-text-fill: #F8E5B2;
+}
+
+.med-friend-card-info{
+    -fx-font-size: 16px;
+    -fx-text-fill: #472C01;
+}
+
 .large-party-card-name{
     -fx-border-color: black;
     -fx-border-width: 2px;
