--- a/src/main/resources/edu/farmingdale/taskmanager/signup-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/signup-view.fxml
@@ -44,6 +44,8 @@
             </Text>
             <TextField fx:id="emailTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="540.0" style="-fx-background-color: #F5EBE0; -fx-background-radius: 12;" translateX="-5.0" translateY="-125.0" />
             <Text fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 22px; -fx-font-family: 'Inknut Antiqua Regular';" text="Username" translateX="-200.0" translateY="-125.0" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number" />
+            <TextField fx:id="phoneNumberTextField" prefHeight="50.0" prefWidth="540.0" style="-fx-background-color: #F5EBE0;" />
             <TextField fx:id="usernameTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="540.0" style="-fx-background-color: #F5EBE0; -fx-background-radius: 12;" translateX="-5.0" translateY="-125.0" />
             <Text fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 22px; -fx-font-family: 'Inknut Antiqua Regular';" text="Password" translateX="-205.0" translateY="-125.0" />
             <TextField fx:id="passwordTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="540.0" style="-fx-background-color: #F5EBE0; -fx-background-radius: 12;" translateY="-125.0" />
@@ -57,7 +59,7 @@
                         </color>
                     </DropShadow>
                 </effect></Button>
-            <Button fx:id="goBackButton" maxWidth="-Infinity" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="50.0" prefWidth="280.0" style="-fx-background-color: white; -fx-font-size: 18px; -fx-border-color: black; -fx-border-radius: 8; -fx-background-radius: 8; -fx-font-family: 'Inknut Antiqua Regular';" text="Go Back" translateY="-30.0" />
+            <Button fx:id="goBackButton" maxWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#onGoBackButtonClick" prefHeight="50.0" prefWidth="280.0" style="-fx-background-color: white; -fx-font-size: 18px; -fx-border-color: black; -fx-border-radius: 8; -fx-background-radius: 8; -fx-font-family: 'Inknut Antiqua Regular';" text="Go Back" translateY="-30.0" />
         </children></VBox>
 </children>
 </StackPane>
