--- a/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
+++ b/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
@@ -105,6 +105,10 @@
     -fx-font-size: 24px;
     -fx-text-fill: #472C01;
 }
+.large-party-card-name{
+    -fx-font-size: 24px;
+    -fx-text-fill: #F8E5B2;
+}
 .chore-card-xp{
     -fx-font-size: 16px;
 
@@ -134,11 +138,6 @@
     -fx-text-fill: #472C01;
 }
 
-.large-party-card-name{
-    -fx-border-color: black;
-    -fx-border-width: 2px;
-    -fx-border-style: solid;
-}
 .button-label.active{
     -fx-text-fill: #E5B515;
 }
