--- a/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
@@ -474,6 +474,10 @@
                                     <Insets top="10.0" />
                                  </VBox.margin>
                               </StackPane>
+                              <VBox fx:id="statContainer" prefHeight="200.0" prefWidth="100.0">
+                                 <padding>
+                                    <Insets left="10.0" />
+                                 </padding></VBox>
                            </children>
                         </VBox>
                         <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="901.0" mouseTransparent="true" stroke="#472c01" strokeType="INSIDE" strokeWidth="2.0" width="739.0" />
